test/runnable/floattest.nt
module floattest;

macro import std.macro.assert;

void main() {
    float f = 2;
    assert(f + 2 == 4);
    assert(5 / f == 2.5);
    float g = 3.5; // polysemous
}
