test/fail_compilation/lambda_escape_return.nt
module lambda_escape_return;

auto test() {
    auto lambda = a => 2;
    auto nest() { return lambda; }
    // This one will error.
    return nest;
}

void main() {
    test()();
}
